Updating project and package.sh to Java 11 (with platform-specific release artifacts)